# english-server

./: CMakeLists.txt
src/: database.cpp  database.h  main.cpp  utils.h
